--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "nuxt": "^3.10.1",
     "pinia": "^2.1.7",
+    "sass": "^1.70.0",
+    "sass-loader": "^14.1.0",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.5.3"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -30,6 +34,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-vue": "^9.15.1",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "vuetify-nuxt-module": "^0.10.3"
   }
 }
