--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-vue": "^9.15.1",
     "prettier": "^2.8.8",
+    "vue3-notion": "^0.1.45",
     "vuetify-nuxt-module": "^0.10.3"
   }
 }
